--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
 
 
   <!-- The "preverify" target requires the bootstrap classes. (This is where they live on Mac OS X.) -->
-  <property name="java.classes.jar" value="/System/Library/Frameworks/JavaVM.framework/Classes/classes.jar" />
+  <property name="java.classes.jar" value="/System/Library/Frameworks/JavaVM.framework/Versions/1.4.2/Classes/classes.jar" />
 
     <fileset id="lib.jars" dir="${lib}">
         <include name="**/*.jar"/>
